--- a/wiki/de/Cables_Workbench.html
+++ b/wiki/de/Cables_Workbench.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier Cables (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente di lavoro (Workbench) per Cablaggi (98% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy Kable (98% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Kable (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Cables_workbench_icon.svg&amp;filetimestamp=20250201205455&amp;.html" class="mw-file-description"><img src="../File/Cables_workbench_icon.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Symbol des externen Arbeitsbereichs Cables</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
@@ -13,12 +13,8 @@
 </p><p>Dieser Werkzeugsatz kann f&uuml;r die Erstellung von Installationsdosen oder anderen gebrauchsfertigen Elektrobauteilen (die Liste der Bauteile w&auml;chst hoffentlich in der Zukunft noch) genutzt werden. Diese Elemente k&ouml;nnen mit vollst&auml;ndig parametrisierbaren Leitungen mit unterschiedlichen Leitungsquerschnitten, mit unterschiedlichen Anzahlen an Leitern und verschiedenen Leiterquerschnitten verbunden werden. Es gibt ein paar vorgefertigte Leitungsquerschnitte, aber es ist ebenso m&ouml;glich, individuelle, nicht standardisierte Querschnitte mit einer einfachen CSV-Datei zu erstellen.
 </p><p>Modelle, die mit diesem Arbeitsbereich erstellt wurden, erm&ouml;glichen Elemente einfach neu zu positionieren, ohne dass Verbindungen verloren gehen. Leitungen k&ouml;nnen ihre Form den Positionen anpassen. Diese Funktion ist jedoch noch nicht perfekt.
 </p><p>Der Arbeitsbereich zielt darauf ab, zum Arbeitsbereich <a href="../de/BIM_Workbench.html" title="BIM Workbench/de">BIM</a> kompatibel zu sein (Festk&ouml;rperobjekte, die hier erstellt wurden, sollten dieselben Basisattribute und Eigenschaften besitzen, wie andere BIM-Objekte: Material, IFC-Typ und IFC-Attribute usw.); er kann aber auch f&uuml;r Zwecke au&szlig;erhalb des Bauwesens genutzt werden. Seit <span style="color:blue;">Version 0.3.0</span> ist der Arbeitsbereich auch besser zum Modellieren von Verbindungen zwischen Leiterplatten innerhalb von Maschinen usw. geeignet. Er erm&ouml;glicht individuelle Bibliotheken mit Verbindern, Anschlussdosen und elektrischen Ger&auml;ten aufzubauen (jede Hilfe bei der Erstellung von z. B. einer (Modell-) Reihe vorgefertigter Verbindungen ist sehr willkommen).
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>For a compatibility table for the current release of the Cables Workbench see: <a href="../Cables_Compatibility_with_BIM_Workbench.html" title="Cables Compatibility with BIM Workbench">Compatibility with BIM Workbench</a>.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="../File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
+</p><p>Eine Kompatibilit&auml;tstabelle f&uuml;r die aktuelle Version des Arbeitsbereichs Cables findet man unter: <a href="../index.php?title=Cables_Compatibility_with_BIM_Workbench/de&amp;action=edit&amp;redlink=1.html" class="new" title="Cables Compatibility with BIM Workbench/de (page does not exist)">Kompatibilit&auml;t mit dem Arbeitsbereich BIM</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="../File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Beispiel von Installationsdosen f&uuml;r Wandmontage und Leitungen <br>Animierte Version <a href="../Cables_Example1_Simple_workflow.html" title="Cables Example1 Simple workflow">hier</a></p>
 <p><span typeof="mw:File"><a href="../index.php?title=Cables_Example1.png&amp;filetimestamp=20251022163000&amp;.html" class="mw-file-description"><img src="../File/Cables_Example1.png" decoding="async" width="600" height="400" class="mw-file-element" data-file-width="600" data-file-height="400"></a></span>
@@ -118,28 +114,28 @@
 <li>Fehler melden: Bitte Fehler <a rel="nofollow" class="external text" href="https://github.com/sargo-devel/Cables/issues">hier</a> melden.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260125104400
+Cached time: 20260125175432
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 179/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 178/1000000
 Post&#8208;expand include size: 3098/2097152 bytes
 Template argument size: 559/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1182/5000000 bytes
+Unstrip post&#8208;expand size: 1191/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.885      1 -total
- 51.61%    2.005      3 Template:Caption
- 41.65%    1.618      1 Template:TOCright
+100.00%    3.570      1 -total
+ 47.93%    1.711      1 Template:TOCright
+ 46.69%    1.667      3 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374177-0!canonical and timestamp 20260125104400 and revision id 1743747. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374177-0!canonical and timestamp 20260125175432 and revision id 1744092. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
