--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -94,11 +94,11 @@
 <h3><span id=".C3.9Adaje"></span><span class="mw-headline" id="&Uacute;daje">&Uacute;daje</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Z&aacute;kladn&iacute;</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Tip</b><span style="font-size:80%;"> (<code>Link</code>)</span>: the <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Feature</a> defined as "Tip", which is usually the last feature created in the Body. The Tip indicates the final shape of the Body, which is shown in the <a href="../3D_View.html" title="3D View">3D View</a> when <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Display Mode Body</b> is set to <code>Tip</code>. See <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> for more information.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Base Feature</b><span style="font-size:80%;"> (<code>Link</code>)</span>: an external shape used as the first <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Feature</a> in the Body. It is usually set when dragging a solid object into an empty Body. If no solid is imported in this way, this property will be empty. See <a href="../PartDesign_Body.html#Base_Feature" title="PartDesign Body">Base Feature</a> for more information.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>Origin</b><span style="font-size:80%;"> (<code>Link</code>)</span>: the <a href="../App_OriginGroupExtension.html" title="App OriginGroupExtension">App Origin</a> object that is the positional reference for all elements listed in <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Group</b>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Group</b><span style="font-size:80%;"> (<code>LinkList</code>)</span>: a list with the <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Features</a> in the Body.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>_ Group Touched</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: whether the group is touched or not.</li></ul>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Tip</b><span style="font-size:80%;"> (<code>Link</code>)</span>: <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvek</a> definovan&yacute; jako "Tip", co&#382; je obvykle posledn&iacute; prvek vytvo&#345;en&yacute; v t&#283;lese. Tip ozna&#269;uje kone&#269;n&yacute; tvar t&#283;lesa, kter&yacute; je zobrazen ve <a href="../3D_View.html" title="3D View">3D pohledu</a>, kdy&#382; je <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Display Mode Body</b> nastaveno na <code>Tip</code>. V&iacute;ce informac&iacute; najdete v sekci <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Base Feature</b><span style="font-size:80%;"> (<code>Link</code>)</span>: vn&#283;j&scaron;&iacute; tvar pou&#382;it&yacute; jako prvn&iacute; <a href="../PartDesign_Feature.html" title="PartDesign Feature">prvek PartDesign</a> v t&#283;lese. Obvykle se nastavuje p&#345;i p&#345;etahov&aacute;n&iacute; pevn&eacute;ho objektu do pr&aacute;zdn&eacute;ho t&#283;lesa. Pokud t&iacute;mto zp&#367;sobem nen&iacute; importov&aacute;no &#382;&aacute;dn&eacute; pevn&eacute; t&#283;leso, bude tato vlastnost pr&aacute;zdn&aacute;. V&iacute;ce informac&iacute; najdete v sekci <a href="../PartDesign_Body.html#Base_Feature" title="PartDesign Body">Z&aacute;kladn&iacute; prvek</a>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>Origin</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Objekt <a href="../App_OriginGroupExtension.html" title="App OriginGroupExtension">App Origin</a>, kter&yacute; je pozi&#269;n&iacute; referenc&iacute; pro v&scaron;echny prvky uveden&eacute; ve <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Skupin&#283;</b>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Group</b><span style="font-size:80%;"> (<code>LinkList</code>)</span>: seznam s <a href="../PartDesign_Feature.html" title="PartDesign Feature">prvky PartDesign</a> v t&#283;lese.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>_ Group Touched</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: zda je skupina dot&#269;ena &#269;i nikoli.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Experimental</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: allow multiple solids in the Body.</li></ul>
@@ -254,15 +254,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125173612
+Cached time: 20260125175434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.195 seconds
-Real time usage: 0.266 seconds
+CPU time usage: 0.170 seconds
+Real time usage: 0.301 seconds
 Preprocessor visited node count: 1502/1000000
-Post&#8208;expand include size: 37765/2097152 bytes
-Template argument size: 9912/2097152 bytes
+Post&#8208;expand include size: 37771/2097152 bytes
+Template argument size: 9918/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -270,19 +270,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.965      1 -total
- 18.60%   11.527      4 Template:KEY
- 12.59%    7.802     14 Template:PropertyData
- 11.08%    6.864     20 Template:Variable
-  7.80%    4.832      1 Template:PartDesign_Tools_navi/cs
-  7.58%    4.697      7 Template:Emphasis
-  7.18%    4.452      1 Template:Userdocnavi/cs
-  6.33%    3.922      2 Template:Navigation_menu_2
-  5.41%    3.352      1 Template:GuiCommand
-  5.21%    3.230      6 Template:PropertyView
+100.00%   63.807      1 -total
+ 16.20%   10.337     14 Template:PropertyData
+ 13.12%    8.370     20 Template:Variable
+ 12.53%    7.995      1 Template:PartDesign_Tools_navi/cs
+ 10.43%    6.657      1 Template:Userdocnavi/cs
+  7.05%    4.499      1 Template:GuiCommand
+  6.68%    4.262      2 Template:Navigation_menu_2
+  6.48%    4.134      6 Template:PropertyView
+  5.87%    3.745      2 Template:Code
+  5.16%    3.295      3 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173612 and revision id 1744086. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175434 and revision id 1744094. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
