--- a/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Compatibility with BIM Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+Compatibility+with+BIM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_Compatibility_with_BIM_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables Compatibility with BIM Workbench (100% translated)" lang="en" dir="ltr">English</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Compatibility_table_of_the_Cables_Workbench_with_the_BIM_Workbench">Compatibility table of the Cables Workbench with the BIM Workbench</span></h2>
-</div>
+<p><span id="Compatibility_table_of_the_Cables_Workbench_with_the_BIM_Workbench"></span>
+</p>
+<h2><span id="Kompatibilit.C3.A4tstabelle_des_Arbeitsbereichs_Cables_mit_dem_Arbeitsbereich_BIM"></span><span class="mw-headline" id="Kompatibilit&auml;tstabelle_des_Arbeitsbereichs_Cables_mit_dem_Arbeitsbereich_BIM">Kompatibilit&auml;tstabelle des Arbeitsbereichs Cables mit dem Arbeitsbereich BIM</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The table below contains a summary of areas in which the elements created in the <a href="../Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a> match the rules and structure from the <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a>.
 </p>
@@ -168,12 +168,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175526
+Cached time: 20260125175628
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.026 seconds
-Real time usage: 0.033 seconds
+CPU time usage: 0.021 seconds
+Real time usage: 0.028 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -187,7 +187,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175526 and revision id 1744098. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175628 and revision id 1744100. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
