--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -99,7 +99,7 @@
 <li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>Origin</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Objekt <a href="../App_OriginGroupExtension.html" title="App OriginGroupExtension">App Origin</a>, kter&yacute; je pozi&#269;n&iacute; referenc&iacute; pro v&scaron;echny prvky uveden&eacute; ve <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Skupin&#283;</b>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Group</b><span style="font-size:80%;"> (<code>LinkList</code>)</span>: seznam s <a href="../PartDesign_Feature.html" title="PartDesign Feature">prvky PartDesign</a> v t&#283;lese.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>_ Group Touched</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: zda je skupina dot&#269;ena &#269;i nikoli.</li></ul>
-<p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Experimental</span>
+<p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Experiment&aacute;ln&iacute;</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: allow multiple solids in the Body.</li></ul>
 <p><span id="View"></span>
@@ -254,15 +254,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175434
+Cached time: 20260125175638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.170 seconds
-Real time usage: 0.301 seconds
+CPU time usage: 0.150 seconds
+Real time usage: 0.232 seconds
 Preprocessor visited node count: 1502/1000000
-Post&#8208;expand include size: 37771/2097152 bytes
-Template argument size: 9918/2097152 bytes
+Post&#8208;expand include size: 37775/2097152 bytes
+Template argument size: 9922/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -270,19 +270,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.807      1 -total
- 16.20%   10.337     14 Template:PropertyData
- 13.12%    8.370     20 Template:Variable
- 12.53%    7.995      1 Template:PartDesign_Tools_navi/cs
- 10.43%    6.657      1 Template:Userdocnavi/cs
-  7.05%    4.499      1 Template:GuiCommand
-  6.68%    4.262      2 Template:Navigation_menu_2
-  6.48%    4.134      6 Template:PropertyView
-  5.87%    3.745      2 Template:Code
-  5.16%    3.295      3 Template:TitleProperty
+100.00%   63.268      1 -total
+ 19.55%   12.369      1 Template:PartDesign_Tools_navi/cs
+ 12.32%    7.792      2 Template:Code
+ 11.37%    7.191     14 Template:PropertyData
+ 10.46%    6.618      6 Template:PropertyView
+  9.38%    5.935     20 Template:Variable
+  6.67%    4.218      1 Template:Userdocnavi/cs
+  6.16%    3.900      2 Template:Navigation_menu_2
+  5.05%    3.193      3 Template:TitleProperty
+  4.93%    3.116      1 Template:GuiCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175434 and revision id 1744094. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175638 and revision id 1744102. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
