--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -101,7 +101,7 @@
 <li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje<span style="font-style:italic;"> (Hidden)</span></span><b>_ Group Touched</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: zda je skupina dot&#269;ena &#269;i nikoli.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Experiment&aacute;ln&iacute;</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: allow multiple solids in the Body.</li></ul>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: umo&#382;n&#283;n&iacute; v&iacute;ce pevn&yacute;ch t&#283;les v t&#283;lese.</li></ul>
 <p><span id="View"></span>
 </p>
 <h3><span class="mw-headline" id="Pohled">Pohled</span></h3>
@@ -254,12 +254,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175638
+Cached time: 20260125175742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.150 seconds
-Real time usage: 0.232 seconds
+CPU time usage: 0.169 seconds
+Real time usage: 0.231 seconds
 Preprocessor visited node count: 1502/1000000
 Post&#8208;expand include size: 37775/2097152 bytes
 Template argument size: 9922/2097152 bytes
@@ -270,19 +270,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.268      1 -total
- 19.55%   12.369      1 Template:PartDesign_Tools_navi/cs
- 12.32%    7.792      2 Template:Code
- 11.37%    7.191     14 Template:PropertyData
- 10.46%    6.618      6 Template:PropertyView
-  9.38%    5.935     20 Template:Variable
-  6.67%    4.218      1 Template:Userdocnavi/cs
-  6.16%    3.900      2 Template:Navigation_menu_2
-  5.05%    3.193      3 Template:TitleProperty
-  4.93%    3.116      1 Template:GuiCommand
+100.00%   54.074      1 -total
+ 14.21%    7.684     14 Template:PropertyData
+ 12.76%    6.901     20 Template:Variable
+ 11.88%    6.423      1 Template:PartDesign_Tools_navi/cs
+  7.66%    4.142      1 Template:Userdocnavi/cs
+  7.30%    3.950      2 Template:Navigation_menu_2
+  6.97%    3.768      6 Template:PropertyView
+  6.96%    3.765      3 Template:TitleProperty
+  6.87%    3.716      2 Template:Code
+  6.62%    3.582      1 Template:GuiCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175638 and revision id 1744102. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175742 and revision id 1744104. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
