--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -105,7 +105,7 @@
 <p><span id="View"></span>
 </p>
 <h3><span class="mw-headline" id="Pohled">Pohled</span></h3>
-<p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
+<p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Z&aacute;kladn&iacute;</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Display Mode Body</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: sets the display mode specifically for the Body with one of two types.
 <ul><li><code>Through</code> (default) exposes all objects inside the Body, that is, <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Features</a>, datum objects, etc. This mode allows visualizing partial operations done inside the Body, and thus it is the recommended mode when adding and editing features. Select the specific feature, and the set <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Visibility</b> to <code>true</code> or press the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Space</span> bar on the keyboard.</li>
@@ -254,15 +254,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175742
+Cached time: 20260125175831
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.231 seconds
+CPU time usage: 0.156 seconds
+Real time usage: 0.221 seconds
 Preprocessor visited node count: 1502/1000000
-Post&#8208;expand include size: 37775/2097152 bytes
-Template argument size: 9922/2097152 bytes
+Post&#8208;expand include size: 37781/2097152 bytes
+Template argument size: 9928/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -270,19 +270,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.074      1 -total
- 14.21%    7.684     14 Template:PropertyData
- 12.76%    6.901     20 Template:Variable
- 11.88%    6.423      1 Template:PartDesign_Tools_navi/cs
-  7.66%    4.142      1 Template:Userdocnavi/cs
-  7.30%    3.950      2 Template:Navigation_menu_2
-  6.97%    3.768      6 Template:PropertyView
-  6.96%    3.765      3 Template:TitleProperty
-  6.87%    3.716      2 Template:Code
-  6.62%    3.582      1 Template:GuiCommand
+100.00%   53.427      1 -total
+ 13.13%    7.015     14 Template:PropertyData
+ 12.62%    6.742      1 Template:PartDesign_Tools_navi/cs
+ 10.98%    5.864     20 Template:Variable
+  9.11%    4.867      1 Template:GuiCommand
+  7.72%    4.124      2 Template:Docnav
+  6.34%    3.385      1 Template:Userdocnavi/cs
+  6.06%    3.239      2 Template:Navigation_menu_2
+  5.64%    3.015      8 Template:Caption
+  5.52%    2.949      6 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175742 and revision id 1744104. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125175831 and revision id 1744108. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
