--- a/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
@@ -160,19 +160,17 @@
 <p><span id="Note_1"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweis_1">Hinweis 1</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The object supports <a href="../Arch_Component.html#Data" title="Arch Component">Component &rarr; Base</a> property partially. It does not follow the base placement.
+<p>Das Objekt unterst&uuml;tzt teilweise die Eigenschaft <a href="../de/Arch_Component.html#Data" title="Arch Component/de">Component &rarr; Base</a>. Es folgt nicht der Basispositionierung (engl. base placement).
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175753
+Cached time: 20260125175956
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.022 seconds
-Real time usage: 0.031 seconds
-Preprocessor visited node count: 125/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.037 seconds
+Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
@@ -185,7 +183,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175753 and revision id 1744106. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175956 and revision id 1744110. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
