--- a/wiki/de/Sketcher_Workbench.html
+++ b/wiki/de/Sketcher_Workbench.html
@@ -372,12 +372,8 @@
 </p>
 <h4><span id="Horizontale_und_vertikale_Abst.C3.A4nde_verwenden"></span><span class="mw-headline" id="Horizontale_und_vertikale_Abst&auml;nde_verwenden">Horizontale und vertikale Abst&auml;nde verwenden</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Das Verwenden der Randbedingungen <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">Horizontaler Abstand</a> und <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">Vertikaler Abstand</a> anstatt der Randbedingung <a href="../de/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/de">Gleichheit festlegen</a> kann Flipping vermeiden. Punkte, die mit diesen Randbedingungen festgelegt wurden, tauschen ihre Pl&auml;tze nicht. Im obigem Bild sind die hinzugef&uuml;gten (orangefarbenen) ma&szlig;lichen Randbedingungen mit den originalen Ma&szlig;angaben &uuml;ber <a href="../de/Expressions.html" title="Expressions/de">Ausdr&uuml;cke</a> verkn&uuml;pft.
-</p>
-</div>
-<p><span id="Use_angle_dimensions"></span>
+</p><p>Das Verwenden der Randbedingungen <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">Horizontaler Abstand</a> und <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">Vertikaler Abstand</a> anstatt der Randbedingung <a href="../de/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/de">Abstand</a> oder <a href="../de/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/de">Gleichheit festlegen</a> kann Flipping vermeiden. Punkte, die mit diesen Randbedingungen festgelegt wurden, tauschen ihre Pl&auml;tze nur, wenn das Vorzeichen ihres Wertes ge&auml;ndert wird. Im obigem Bild sind die hinzugef&uuml;gten (orangefarbenen) ma&szlig;lichen Randbedingungen mit den originalen Ma&szlig;angaben &uuml;ber <a href="../de/Expressions.html" title="Expressions/de">Ausdr&uuml;cke</a> verkn&uuml;pft.
+</p><p><span id="Use_angle_dimensions"></span>
 </p>
 <h4><span id="Winkelma.C3.9Fangaben_verwenden"></span><span class="mw-headline" id="Winkelma&szlig;angaben_verwenden">Winkelma&szlig;angaben verwenden</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
@@ -442,12 +438,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102646
+Cached time: 20260125203216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.397 seconds
-Real time usage: 0.496 seconds
+CPU time usage: 0.361 seconds
+Real time usage: 0.531 seconds
 Preprocessor visited node count: 1299/1000000
 Post&#8208;expand include size: 33468/2097152 bytes
 Template argument size: 8911/2097152 bytes
@@ -458,19 +454,19 @@ Unstrip post&#8208;expand size: 4774/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.973      1 -total
- 16.48%    6.919      1 Template:Sketcher_Tools_navi/de
- 11.82%    4.962      1 Template:PropertyView/de
- 11.05%    4.639     42 Template:Version/de
-  9.21%    3.867      2 Template:Docnav/de
-  7.08%    2.970      8 Template:VersionPlus/de
-  7.02%    2.949      6 Template:Caption
-  5.79%    2.429      1 Template:TOCright
-  5.39%    2.261      1 Template:Userdocnavi/de
-  5.20%    2.184      1 Template:Variable
+100.00%   33.971      1 -total
+ 20.12%    6.834      1 Template:PropertyView/de
+ 11.89%    4.040     42 Template:Version/de
+  9.63%    3.270      1 Template:Sketcher_Tools_navi/de
+  7.26%    2.466      6 Template:Caption
+  6.22%    2.113      8 Template:VersionPlus/de
+  6.14%    2.087      2 Template:Docnav/de
+  6.11%    2.074      1 Template:Variable
+  5.87%    1.995      2 Template:Version
+  5.74%    1.951      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2316-0!canonical and timestamp 20260125102646 and revision id 1743610. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2316-0!canonical and timestamp 20260125203215 and revision id 1744112. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
